fixed bug in EmployeeEdit not showing employee position

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -810,10 +810,6 @@ select {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-.mx-24 {
-  margin-left: 6rem;
-  margin-right: 6rem;
-}
 .mb-3 {
   margin-bottom: 0.75rem;
 }
